app/assets/stylesheets/user.scss
@import "compass";
@import 'application';
@import "user/variables";
@import "user/general";
@import "user/navigation";
@import "user/forms";
@import 'calendar';
@import 'j_growl_rails/jquery.jgrowl';


html, body{
  height: 100%;
  font-family: "Proxima Nova";
  overflow-x: hidden;
  background-color: $backGray;
}

.notice, .alert{
  display: none;
}

#jGrowl{
  top: 55px;
  .jGrowl-notification{
    color: white;
    background-color: $themeBlue;
    opacity: 1;
    font-family: 'Proxima Nova';
    font-size: 1.3em;
    .jGrowl-close{
      line-height: 1em;
      font-size: 1.5em;
    }
  }
}

/* User view
========================================================================== */
.user-container{
  padding-top: 52px !important;
}
@media (min-width: 769px) and (max-width: 1400px) {
  .user-container {
    width: 70%;
    margin: auto;
  }
}
@media (min-width: 1400px){
  .user-container{
    width: 55%;
    margin: auto;
  }

}

//.row{
//  margin-top: 0;
//  background-color: white;
//}
.panel-white{
  background: white;
}
.separator{
  min-height: 5vh;
  position: relative;
  clear: both;
}

.no-padding {
  padding: 0 !important;
  margin: 0 !important;
}

/* mobile
-------------------*/

.user-image-wrapper{
  overflow: hidden;
  width: 100%;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  height: 100vh;

  .wrapper-background{
    width: 100%;
    overflow: hidden;

    .image-background{
      @include filter(blur(2px));
      height:100vh;
    }
    .wrapper-center{
      .user-image {
        border-radius: 50%;
        width: 30vw;
        border: 3px solid $themeYellow;
      }
      .user-name{
        font-size: 1.5rem;
        color: white;
        font-weight: bold;
        margin-top: 10px;
      }
    }
  }
}


.test{
  text-align: center;
  .question{
    margin-top: 15px;
    font-size: calculateRem(24px);
  }
  .responses{
    a, a:active, a:hover{
      color: $textDarkGray !important;
      text-decoration: none !important;
    }
    .option {
      margin-bottom: 15px;
      text-align: center;
      min-height: 30vh;
      width: 100%;
      display: table;
      margin-top: 15px;
      .image{
        width: 100%;
      }
      .caption{
        position: absolute;
        bottom: 20px;
        right: 20px;
        background-color: $buttonPink;
        color: white;
        font-size: calculateRem(20px);
        padding: 10px;
      }
      .selector{
        position: absolute;
        width: 60px;
        height: 120px;
        top: 50%;
        @include translate(0, -50%);
        text-align: center;

        right: 10px;

        color: $textDarkGray;
        background-color: white;
        font-size: calculateRem(30px);
        //border: 2px solid $textDarkGray;
        //box-sizing: border-box;
        background-image: linear-gradient($textDarkGray, $textDarkGray);
        background-position: 0% 50%;
        background-repeat: no-repeat;
        background-size: 0% 100%;
        @include transition(background-size .5s, color .5s);
        *{
          margin-top: 50%;
          @include translate(0, 50%);
        }
        &:hover{
          background-size: 100% 100%;
          color: white;
        }
        padding: 10px;
      }
      .text{
        border: 1px solid $lightGray;
        font-size: 2rem;
        display: table-cell;
        vertical-align: middle;
        &.pink{
          background-color: $buttonPink;
        }
        &.yellow{
          background-color: $themeYellow;
        }
      }
    }
  }

}

.notification-list{
  .notification{
    padding: 2% 0;
    border: 0 solid $themeYellow;
    border-bottom-width: 1px;
    .message{
      color: $textDarkGray;
    }
    .time{
      color: $textGray;
    }
  }
}

@media (max-width: 767px) {
  .user-sm {
    display: none;
  }

  .no-padding-xs {
    padding: 0 !important;
    margin: 0 !important;
  }
}

@media (orientation: portrait) {
  .wrapper-background {
    .image-background {
      width: auto;
    }

    .wrapper-center {
      position: absolute;
      left: 50%;
      top: 40%;
      width: 100%;
      @include translate(-50%, -50%);
    }

    .new-reservation {
      @include translate(0%, -50%);
      position: absolute;
      top: 70%;
      width: 100%;
    }
  }
}

@media (orientation: landscape) {
  .wrapper-background {
    .image-background {
      width: 100%;
      height: auto;
    }

    .wrapper-center {
      @include translate(-50%, -50%);
      position: absolute;
      left: 30%;
      top: 50%;
      width: 50%
    }

    .new-reservation {
      @include translate(-50%, -50%);
      position: absolute;
      top: 50%;
      left: 75%;
      width: 50%;
    }
  }
}

/* tablet
-------------------*/

@media (min-width: 768px) {
  .user-xs {
    display: none;
  }

  //.row {
  //  //@include flexbox;
  //  margin-top: 10px;
  //}

  .sm-separator {
    border-right: 2px solid $themeYellow;
    box-sizing: border-box;
  }

  .lg-separator {
    display: none;
  }

  .wrapper-control {
    padding-top: 15px;
    border-left: 2px solid $themeYellow;

    .panel-yellow {
      border-color: $themeYellow;

      .panel-heading {
        background-color: $themeYellow;
        color: white;
      }
    }

  }

  .notification-list{
    max-height: 40vh;
    overflow: auto;
    &.full{
      max-height: 100vh;
    }
  }

}



/* desktop
-------------------*/
@media (min-width: 1200px) {
  .sm-separator {
    border: none;
  }

  .lg-separator {
    display: block;
    border-right: 2px solid $themeYellow;
    box-sizing: border-box;
  }


}

/* User preferences
========================================================================== */
.age-slider {
  margin-bottom: 25px;
  width: 100%;

  .age-span {
    display: inline-block;
    width: 10%;

    &:last-child {
      text-align: right;
    }
  }
}

#age-slider {
  text-align: center;
  width: 80%;

  .slider-handle {
    background: $buttonYellow;
  }

  .slider-selection {
    background: $themeYellow;
  }
}

@media (min-width: 768px) {
  .age-slider {
    .age-span {
      width: 8%;
    }
  }

  #age-slider {
    width: 84%;
  }
}

@media (min-width: 1200px) {
  .age-slider {
    .age-span {
      width: 7%;
    }
  }

  #age-slider {
    width: 86%;
  }
}
/* Reservation
========================================================================== */
input.company {
  margin-right: 5px;
}

.reservation{
  width: 100%;
  padding: 0 0;
  height: auto;
  .restaurant-image {
    margin-top: 20px;
    width: 100%;
  }

  .affinity{
    margin-bottom: 5%;
    .value{
      padding-top: 6px;
      font-size: 2rem;
      font-weight: bold;
    }
  }

  .main-info {
    padding: 5% 0;
    min-height: 100px;
    line-height: 40px;
    .restaurant-name {
      font-size: 1.2rem;
      font-weight: bold;
    }

    .address{
      font-size: 1.2rem;
    }
  }

  .menu{
    .menu-title, .menu-price {
      //font-size: 1.3rem;
    }
    .menu-price {
      text-align: right;
    }
  }
}

.search-results {
  margin-top: 15px;
  a, a:hover, a:active {
    text-decoration: none;
    color: $textDarkGray;
  }
  .search-result-item {
    .menu-data{
      padding: 40px 10px;
    }
    .affinity-tag {
      width: 50px;
      height: 50px;
      position: absolute;
      right: 0;
      z-index: 2;
      top: -10px;
      background-color: $buttonPink;
      color: white;
      display: table;
      text-align: center;
      .value{
        font-weight: bold;
        display: table-cell;
        vertical-align: middle;
      }
    }
    .data-search-wrapper{
      padding: 10px;
    }
    border-radius: 2px;
    margin-bottom: 15px;
    img {
      width: 100% !important;
    }
    .title {
      font-weight: bold;
      .bi_interface-circle {
        font-size: 1rem;
        color: $buttonYellow;
      }
    }
    .menu-title{
      text-align: right;

      .price{
        color: $buttonPink;
      }
    }
    .time {
      color: $textGray;
      //text-align: right;
    }
    .address{
      clear: both;
      margin-top: 15px;
    }

  }
}
.big-box {
  padding: 10px;
  text-align: center;
  background-color: white;
  border: 2px solid $themeBlue;
  border-radius: 2px;
  color: $textDarkGray;
  &.pink{
    background-color: $buttonPink;
    color: white;
  }
}
.choosing-box{
  //margin-top: 15px;
  width: 100%;
  border-radius: 2px;

  .text{
    width: 50%;
    margin-bottom: 15px;
    float: left;
    //font-size: 1.2em;
    padding: 6px 12px;
    border: 1px solid $lightGray;
    &.selected{
     background-color: $themeYellow;
      &.blue{
        background-color: $themeBlue;
        color: white;
      }
    }
    &.long{
      width: 100%;
      margin-bottom: 0;

      &.last{
        margin-bottom: 15px;
      }
    }
  }
}



/* Payment
========================================================================== */
.card{
  font-size: 4rem;
}
.card-text{
  font-size: 1.3rem;
}

/* Calendar
========================================================================== */
.calendar {
  .calendar-header {
    overflow: auto;

    a {
      &:first-child {
        float: left;
      }
      &:last-child {
        float: right;
      }
    }

    span {
      display: inline-block;
      font-size: 1.45rem;
      padding: 10.5px 0 !important;
    }
  }

  .table {
    thead {
      font-size: 1.1rem;

      th {
        padding: 10px 0 !important;
      }
    }

    tbody {
      font-size: 1.1rem;

      .status-table {
        margin-right: -10px;
        margin-left: -10px;

        a {
          font-size: 0.8rem;
        }
      }
    }
  }
}

@media (min-width: 768px) {
  .calendar {
    .calendar-header {
      span {
        font-size: 2rem;
        padding: 4px 0 !important;
      }
    }

    .table {
      thead {
        font-size: 1.4rem;

        th {
          padding: 10px !important;
        }
      }

      tbody {
        font-size: 1.4rem;

        .status-table {
          margin-right: -10px;
          margin-left: -10px;

          a {
            font-size: 1.1rem;
          }
        }
      }
    }
  }
}

.desktop{
  color: $textDarkGray;
  .reservations{
    //padding: 20px 0;

  }
  .my-reservations{
    //margin-top:
  }
  .tests{
    .info{
      font-size: calculateRem(25px);
      color: $textGray;
      padding: 20px calculatePercent(50px, $lg-width);

    }
    .icon{
      padding: 20px calculatePercent(50px, $lg-width);
      font-size: calculateRem(40px);
      color: $buttonPink;
    }
  }
  .suggest{
    font-size: calculateRem(18px);
    margin-bottom: 20px;
  }
}

